# serialization

./: CMakeLists.txt  README.md
cmake/: serializationConfig.cmake.in
docs/: README.md
include/serialization/: NetworkObjectReceiver.hpp  NetworkObjectSender.hpp  Serialization.hpp  serialize_variant.hpp
include/serialization/networkobjectreceiver/: Nljs.hpp  Structs.hpp
include/serialization/networkobjectsender/: Nljs.hpp  Structs.hpp
schema/: generate.sh  serialization-NetworkObjectReceiver-schema.jsonnet  serialization-NetworkObjectSender-schema.jsonnet
schema/serialization/: NetworkObjectReceiver.jsonnet
test/apps/: inheritance.cxx  network_object_send_receive.cxx  non_moo_type.cxx  serialization_speed.cxx  serialization_speed_no_ipm.cxx
test/schema/serialization/: fsd.jsonnet
test/src/serialization/fsd/: Msgp.hpp  Nljs.hpp  Structs.hpp
unittest/: Serialization_test.cxx
